<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LIFE+</string>
    <string name="health">health </string>
    <string name="coin">coin </string>
    <string name="saved_game">SAVE1</string>
    <!--Feeding buttons-->
    <string name="feed_treat">treat (10)</string>
    <string name="feed_bowl">bowl (20)</string>
    <string name="feed_big_bowl">big bowl (30)</string>
    <string name="feed_ribs">ribs (50)</string>
    <string name="feed_chicken">chicken (75)</string>
    <string name="feed_steak">steak (100)</string>
    <string name="level_up">升级</string>



    <string name="app_version">Version 1.0</string>
    <string name="action_settings">Settings</string>
    <!-- Activities -->
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_demo">Demo</string>
    <string name="title_activity_text">Text</string>
    <string name="title_activity_model">Model</string>
    <string name="title_activity_main">Main</string>
    <!-- Demo menu -->
    <string name="item">item</string>

    <string-array name="menu_items">
        <item>Load Model</item>
<!--        <item>Models</item>-->
        <item>Demo</item>
        <item>Help</item>
        <item>About</item>
        <item>GitHub</item>
<!--        <item>Exit</item>-->
    </string-array>

    <string name="image">image</string>
    <!-- Help -->
    <string name="help_text">* Load Model: Load embedded models or from your device (you can find a lot in Internet. Just download them to your device). Please load only wavefront, stereolithography or Collada files (*.obj, *.stl, *.dae). If the model file (.obj) is referencing any materials file (*.mtl) be sure its in the same folder; same applies for texture files (*.jpg, *.bmp) being referenced in the material file.\n\n.* Demo: This is a demo of what can be done with the app. It basically loads several models to show usage of different draw modes, colors, textures and loading of files.\n\n* Help: This instructions page\n\n* About: Credits of this app.\n\n\nRenderer: Once you load a model, you can pinch to zoom, rotate the camera with your finger and rotate the screen with 2 fingers\n\nIn the action bar you will also find several buttons for toggling different draw modes like wireframe or points, enabling or disabiling lights, textures or animation.\n\nIf you need more help feel free to ask me: johnzhaoy@yahoo.com</string>
    <!-- About -->
    <string name="about_text">This application allows you to load 3D object models (currently only Wavefront, Stereolithography and Collada formats are supported).\n\nThe purpose of this application is to learn how to draw in android using the OpenGL 2.0 language.\n\nThe code for this application is open source and it can be found at https://github.com/johnzhaoy/android-3D-model-viewer\n\nAs this is my first android app and Im still learning the OpenGL 2.0 language, it is highly probable that there are bugs; but I will try to continue improving the app.\n\nThe included models in the app were taken for free from Internet.\n\nAny comments, suggestions, contributions, complains or donations are welcome. Feel free to contact me at johnzhaoy@yahoo.com.\n\nFor more info about me visit https://johnzhaoy.github.io/</string>
    <!-- Load settings -->
    <string name="model_name">Model name</string>
    <string name="texture">Texture</string>
    <string name="invert_texture_coordinates">Invert texture coordinates</string>
    <string name="cancel">Cancel</string>
    <string name="load">Load</string>
    <string name="load_model">Load Model</string>

    <!-- GL Settings -->
    <string name="toggle_wireframe">Toggle wireframe</string>
    <string name="toggle_textures">Toggle textures</string>
    <string name="toggle_lights">Toggle lights</string>
    <string name="toggle_animation">Toggle animation</string>
    <!--<string name="toggle_skeleton">Toggle skeleton</string>-->
    <string name="toggle_boundingbox">Toggle bounding box</string>
    <string name="load_texture">Load texture</string>

    <!-- To review -->
    <string name="app_logo_desc">Teapot animated logo</string>

    <string name="sleep">睡觉</string>
    <string name="study">学习</string>
    <string name="sport">运动</string>
    <string name="exit">退出</string>
    <string name="user">用户</string>
    <string name="news">公告</string>
    <string name="friend">好友</string>

    <string name="login">登录</string>
    <string name="register">立即加入</string>
    <string name="not_yet">还不是会员？</string>

</resources>