<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundLayoutID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/sleep"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/bt_shape"
        android:text="@string/sleep"
        android:textColor="#ffffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toRightOf="@id/study"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/study"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/bt_shape2"
        android:text="@string/study"
        android:textColor="#ffffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/sport"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/btshape3"
        android:text="@string/sport"
        android:textColor="#ffffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/study"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/user"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/bt_shape4"
        android:text="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/levelUp"
        android:gravity="center"
        android:onClick="onLevelUpClicked"
        android:text="@string/level_up"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/bt_shape4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/friend"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/bt_shape4"
        android:text="@string/friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/bt_shape4"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />


    <!--the following are the stabagotchi code-->
    <!--最上面的一排字-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="46dp">

        <TextView
            android:id="@+id/healthTextViewID"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="18sp"
            app:fontFamily="@font/coda"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="24dp" />

        <ProgressBar
            android:id="@+id/healthBarID"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            app:layout_constraintStart_toEndOf="@+id/healthTextViewID"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/levelTextViewID"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/coda"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coinImageView"
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coin"
            android:textSize="18sp"
            android:onClick="onCoinClicked"
            app:layout_constraintEnd_toStartOf="@+id/coinPointsTextViewID"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VectorDrawableCompat"/>



        <TextView
            android:id="@+id/coinPointsTextViewID"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="24dp" />
    </LinearLayout>
    <!--人偶的名字-->
    <EditText
        android:focusableInTouchMode="true"
        android:id="@+id/nameTextViewID"
        android:imeOptions="actionDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="Taco"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:fontFamily="@font/coda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--人偶-->
    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="221dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextViewID">

        <ImageView
            android:id="@+id/petImageID"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="0dp"
            android:onClick="onPetClicked"
            app:layout_constraintBottom_toTopOf="@+id/feedBigBowlID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextViewID"
            app:srcCompat="@drawable/red_0_pic"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>
    <!--喂食-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/feedTreatID"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:onClick="onFeedTreatClicked"
            android:background="@drawable/bt_shape4"
            android:text="@string/feed_treat"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/feedBowlID"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/feedBowlID"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"

            android:layout_weight="1"
            android:onClick="onFeedBowlClicked"
            android:background="@drawable/bt_shape4"
            android:text="@string/feed_bowl"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/feedBigBowlID"
            app:layout_constraintStart_toEndOf="@+id/feedTreatID" />

        <Button
            android:id="@+id/feedBigBowlID"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:onClick="onFeedBigBowlClicked"
            android:background="@drawable/bt_shape4"
            android:text="@string/feed_big_bowl"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/feedRibsID"
            app:layout_constraintStart_toEndOf="@+id/feedBowlID" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/feedRibsID"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:onClick="onFeedRibsClicked"
            android:background="@drawable/bt_shape4"
            android:text="@string/feed_ribs"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/feedChickenID"
            app:layout_constraintStart_toEndOf="@+id/feedBigBowlID" />

        <Button
            android:id="@+id/feedChickenID"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:onClick="onFeedChickenClicked"
            android:background="@drawable/bt_shape4"
            android:text="@string/feed_chicken"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/feedSteakID"
            app:layout_constraintStart_toEndOf="@+id/feedRibsID" />

        <Button
            android:id="@+id/feedSteakID"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:onClick="onFeedSteakClicked"
            android:background="@drawable/bt_shape4"
            android:text="@string/feed_steak"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/feedChickenID"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>